[package]
name = "impossible-polygon"
version = "0.1.0"
authors = ["NyxCode <moritz.bischof1@gmail.com>"]
edition = "2018"

[lib]
#crate-type = ["cdylib"]
name = "impossible_polygon"
path = "src/lib.rs"

[[bin]]
name = "impossible-polygon"
path = "src/bin.rs"


[dependencies]
svg = "0.5.12"
wasm-bindgen = "0.2.48"


